# pengine

./: .gitignore  CMakeLists.txt  README.md
.claude/: settings.json
.github/workflows/: ci.yml
assets/Characters_psx/Animations/: Breathing Idle.fbx  Sprint.fbx  Walking.fbx
assets/characters/Characters_psx/Animations/: Dying Backwards.fbx  Dying Forwards.fbx  Falling Down.fbx  Hit By Car.fbx  Jump.fbx
assets/characters/Characters_psx/Animations/Pistol_Handgun Locomotion Pack/: Character_32.fbx  pistol idle.fbx  pistol jump (2).fbx  pistol jump.fbx  pistol kneel to stand.fbx  pistol kneeling idle.fbx  pistol run arc (2).fbx  pistol run arc.fbx  pistol run backward arc (2).fbx  pistol run backward arc.fbx  pistol run backward.fbx  pistol run.fbx  pistol stand to kneel.fbx  pistol strafe (2).fbx  pistol strafe.fbx  pistol walk arc (2).fbx  pistol walk arc.fbx  pistol walk backward arc (2).fbx  pistol walk backward arc.fbx  pistol walk backward.fbx  pistol walk.fbx
assets/materials/: ground.mat
assets/models/: test_scene.emesh  test_scene.mtl
assets/models/characters/: breathing_idle.eanim  character_01.eanim  character_01.emesh  character_01.eskel  dying_backwards.eanim  dying_forwards.eanim  hit_by_car.eanim  ped_03.eanim  ped_03.emesh  ped_03.eskel  ped_07.eanim  ped_07.emesh  ped_07.eskel  ped_17_police.eanim  ped_17_police.emesh  ped_17_police.eskel  ped_f03.eanim  ped_f03.emesh  ped_f03.eskel  ped_f07.eanim  ped_f07.emesh  ped_f07.eskel  pistol_idle.eanim  pistol_run.eanim  pistol_walk.eanim  sprint.eanim  walking.eanim
assets/models/vehicles/: car5.emesh  car8.emesh  wheel.emesh
assets/models/weapons/: glock17.emesh
assets/shaders/: debug.vert  lit.frag  lit.vert  lit_instanced.vert  minimap.frag  minimap.vert  particles.frag  particles.vert  skinned.vert  text.frag  text.vert
assets/weapons/Glock 17 Gen 4/: MagazineOnly.fbx
assets/world/: streets.ide
cmake/: CookedAssets.cmake
docs/: assets.md  backlog.md  pr_workflow.md  risk-register.md
src/: Application.cpp  Application.h  main.cpp
src/audio/: audio_engine.cpp  audio_engine.h  miniaudio_impl.c
src/core/: anim_format.h  emesh_format.h  log.h  skeleton_format.h  time.h
src/editor/: map_builder.cpp  map_builder.h
src/game/: car_models.cpp  car_models.h  pedestrian.cpp  pedestrian.h  pedestrian_ai.cpp  pedestrian_ai.h  player.cpp  player.h  player_vehicle.cpp  player_vehicle.h  police_system.cpp  police_system.h  traffic.cpp  traffic.h  traffic_ai.cpp  traffic_ai.h  traffic_collisions.cpp  traffic_drive.cpp  traffic_internal.h  traffic_spawn.cpp  traffic_visuals.cpp  vehicle.cpp  vehicle.h  vehicle_effects.cpp  vehicle_effects.h  wanted_system.cpp  wanted_system.h  weapons.cpp  weapons.h
src/physics/: character_controller.cpp  character_controller.h  rigid_body.h  world_collision.cpp  world_collision.h
src/platform/: input.cpp  input.h  window.cpp  window.h
src/render/: animation.cpp  animation.h  camera.cpp  camera.h  crosshair.cpp  crosshair.h  debug_draw.cpp  debug_draw.h  debug_overlay.cpp  debug_overlay.h  gl_state.h  hud.cpp  hud.h  material.cpp  material.h  menu.cpp  menu.h  mesh.cpp  mesh.h  minimap.cpp  minimap.h  model.cpp  model.h  particles.cpp  particles.h  shader.cpp  shader.h  skeleton.cpp  skeleton.h  skinned_mesh.cpp  skinned_mesh.h  speedometer.cpp  speedometer.h  spring_arm.cpp  spring_arm.h  text.cpp  text.h  texture.cpp  texture.h  wanted_stars.cpp  (+1 more)
src/scene/: aabb.h  frustum.h  scene.cpp  scene.h  scene_node.cpp  scene_node.h  transform.h
src/world/: cell_coord.h  city_layout.cpp  city_layout.h  heightmap.cpp  heightmap.h  instance_def.h  ipl_loader.cpp  ipl_loader.h  model_def.h  model_registry.cpp  model_registry.h  road_graph.cpp  road_graph.h  road_grid.h  streamer.cpp  streamer.h  terrain.cpp  terrain.h  world_defs.h  world_model_ids.h
tests/: map_builder_round_trip_tests.cpp  map_editor_persistence_tests.cpp  test_assert.h  traffic_ai_tests.cpp  traffic_system_tests.cpp
tools/meshconv/: main.cpp
